--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
   <header>
-    <h1>Города-герои России</h1>
+    <h1>Города-герои</h1>
     <p>Память о подвигах во время Великой Отечественной войны</p>
   </header>
 
