--- a/moscow.html
+++ b/moscow.html
@@ -9,11 +9,11 @@
       margin: 0;
       font-family: Arial, sans-serif;
       color: #333;
-      background-image: url('ФО.png'); /* Путь к изображению */
-      background-size: cover; /* Масштабирует изображение под размер экрана */
-      background-position: center; /* Центрирует изображение */
-      background-repeat: no-repeat; /* Запрещает повторение фона */
-      background-attachment: fixed; /* Делает фон неподвижным */
+      background-image: url('ФО.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
     }
     header {
       background-color: #2c3e50;
@@ -66,7 +66,7 @@
 </head>
 <body>
   <header>
-    <h1>Города-герои России</h1>
+    <h1>Города-герои</h1>
     <p>Память о подвигах во время Великой Отечественной войны</p>
   </header>
 
